fixed z-index of notifications

--- a/React/src/scss/style.scss
+++ b/React/src/scss/style.scss
@@ -707,6 +707,7 @@ input[type="range"]::-ms-fill-upper {
   bottom: 0;
   left:50%; 
   transform:translate(-50%, 0); 
+  z-index: 1000;
 
   .notification{
     position: relative;
